<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="200dp"
        android:src="@drawable/profile"
        android:layout_height="200dp"
        android:contentDescription="profile image" />


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/agbadi_paul"
        android:textStyle="bold"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@id/divView"
        android:layout_marginBottom="5dp"
        android:textSize="30sp"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:background="#000000"
        android:id="@+id/divView"
        android:layout_centerInParent="true"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_below="@id/divView"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
        android:layout_marginBottom="3dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/track_android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="3dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/country_ghana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginBottom="3dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/email_sparrowpaul2_gmail_com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginBottom="3dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/phone_number_233542686544"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="3dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/slack_username_sparrowpaul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</RelativeLayout>